test/classes/errors/nilability-assign/assign-nonnil-unmanaged-from-oknil-nil.good
assign-nonnil-unmanaged-from-oknil-nil.chpl:8: error: cannot assign to unmanaged MyClass from nil
